@@ -12,6 +12,7 @@ FEATURES:
 	  same as before are not checked for a serial update at server start.
 BUG FIXES:
 	- Fixed shutdown message sporadically not printed on exit.
+	- Documented zonefile %s syntax in nsd.conf man page.
 
 
 4.0.3
